{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 71,
  "lineage": "c7b55d90-70fb-b972-6505-f3dd2649dd10",
  "resources": [
    {
      "module": "module.eks_example_eks-auto-mode.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:security-group/sg-086b077c3f5cec120",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-086b077c3f5cec120",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0839603b38dc671c1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ex-github-cd-cluster-2025050308095027270000000f",
            "name_prefix": "ex-github-cd-cluster-",
            "owner_id": "805395122898",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-cluster",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-cluster",
              "Test": "ex-github-cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:security-group/sg-0839603b38dc671c1",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0839603b38dc671c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086b077c3f5cec120"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086b077c3f5cec120"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086b077c3f5cec120"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086b077c3f5cec120"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086b077c3f5cec120"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086b077c3f5cec120"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "ex-github-cd-node-20250503080950507400000010",
            "name_prefix": "ex-github-cd-node-",
            "owner_id": "805395122898",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-node",
              "Test": "ex-github-cd",
              "kubernetes.io/cluster/ex-github-cd": "owned"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-node",
              "Test": "ex-github-cd",
              "kubernetes.io/cluster/ex-github-cd": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1835612947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086b077c3f5cec120",
            "security_group_rule_id": "sgr-00c473e0101b29d2b",
            "self": false,
            "source_security_group_id": "sg-0839603b38dc671c1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4286994258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-060ccb028f07c9a9c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3476622381",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-023f7594243e19d77",
            "self": false,
            "source_security_group_id": "sg-086b077c3f5cec120",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3381818076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-09cc7eb55ee23b6cd",
            "self": false,
            "source_security_group_id": "sg-086b077c3f5cec120",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-13636938",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-0c5ab233318b4ed1e",
            "self": false,
            "source_security_group_id": "sg-086b077c3f5cec120",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-327952747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-0be543b577ad8c440",
            "self": false,
            "source_security_group_id": "sg-086b077c3f5cec120",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1999444640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-0547f60e20c586b65",
            "self": false,
            "source_security_group_id": "sg-086b077c3f5cec120",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3371052862",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-08bca5086834700e6",
            "self": false,
            "source_security_group_id": "sg-086b077c3f5cec120",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3997650732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-02df5e6a159aec182",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1698348189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-0dc818a4f209d27e6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3244629874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0839603b38dc671c1",
            "security_group_rule_id": "sgr-0605cee94bdb4db45",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.cluster",
            "module.eks_example_eks-auto-mode.module.eks.aws_security_group.node",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:network-acl/acl-039dd49efcab05eb3",
            "default_network_acl_id": "acl-039dd49efcab05eb3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-039dd49efcab05eb3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "805395122898",
            "subnet_ids": [
              "subnet-00c2b9cb65865bffb",
              "subnet-04c26257262275352",
              "subnet-05855a3b57845dbbd",
              "subnet-05f3ddc1023220e59",
              "subnet-0b3323db2b81b007c",
              "subnet-0bfb64e7d12b3b1db",
              "subnet-0c9dd93200c387a42",
              "subnet-0e1e51f797c426124",
              "subnet-0e9f31c708ed92939"
            ],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-default",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-default",
              "Test": "ex-github-cd"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:route-table/rtb-0a8f763f2e6ff8b49",
            "default_route_table_id": "rtb-0a8f763f2e6ff8b49",
            "id": "rtb-0a8f763f2e6ff8b49",
            "owner_id": "805395122898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-default",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-default",
              "Test": "ex-github-cd"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:security-group/sg-0b5c5922d6ddd2801",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b5c5922d6ddd2801",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "805395122898",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-default",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-default",
              "Test": "ex-github-cd"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083608561ee55ff25",
            "arn": "arn:aws:ec2:us-west-2:805395122898:elastic-ip/eipalloc-083608561ee55ff25",
            "association_id": "eipassoc-0e11ea3e491c9dc43",
            "domain": "vpc",
            "id": "eipalloc-083608561ee55ff25",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0d7eac7e69ca06ff4",
            "private_dns": "ip-10-0-48-114.us-west-2.compute.internal",
            "private_ip": "10.0.48.114",
            "public_dns": "ec2-54-186-204-196.us-west-2.compute.amazonaws.com",
            "public_ip": "54.186.204.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-us-west-2a",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-us-west-2a",
              "Test": "ex-github-cd"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_internet_gateway.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:internet-gateway/igw-04c4fc0981122dcdd",
            "id": "igw-04c4fc0981122dcdd",
            "owner_id": "805395122898",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd",
              "Test": "ex-github-cd"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083608561ee55ff25",
            "association_id": "eipassoc-0e11ea3e491c9dc43",
            "connectivity_type": "public",
            "id": "nat-036e8b389848c08bd",
            "network_interface_id": "eni-0d7eac7e69ca06ff4",
            "private_ip": "10.0.48.114",
            "public_ip": "54.186.204.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b3323db2b81b007c",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-us-west-2a",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-us-west-2a",
              "Test": "ex-github-cd"
            }
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_eip.nat",
            "module.eks_example_eks-auto-mode.module.vpc.aws_internet_gateway.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07b2add70e420e4c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-036e8b389848c08bd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b2add70e420e4c8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_eip.nat",
            "module.eks_example_eks-auto-mode.module.vpc.aws_internet_gateway.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_nat_gateway.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.private",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c4fc0981122dcdd",
            "id": "r-rtb-0ca10e8820ad049271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca10e8820ad04927",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_internet_gateway.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:route-table/rtb-0c652593e355ab7c2",
            "id": "rtb-0c652593e355ab7c2",
            "owner_id": "805395122898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-intra",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-intra",
              "Test": "ex-github-cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:route-table/rtb-07b2add70e420e4c8",
            "id": "rtb-07b2add70e420e4c8",
            "owner_id": "805395122898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-036e8b389848c08bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-private",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-private",
              "Test": "ex-github-cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:route-table/rtb-0ca10e8820ad04927",
            "id": "rtb-0ca10e8820ad04927",
            "owner_id": "805395122898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c4fc0981122dcdd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-public",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-public",
              "Test": "ex-github-cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0210ce9bfbd838f",
            "route_table_id": "rtb-0c652593e355ab7c2",
            "subnet_id": "subnet-00c2b9cb65865bffb"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.intra",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.intra",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8f60e3d8b5b75ce",
            "route_table_id": "rtb-0c652593e355ab7c2",
            "subnet_id": "subnet-05f3ddc1023220e59"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.intra",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.intra",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0142f2795cebf0b03",
            "route_table_id": "rtb-0c652593e355ab7c2",
            "subnet_id": "subnet-0e1e51f797c426124"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.intra",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.intra",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbb209cf383aa18a",
            "route_table_id": "rtb-07b2add70e420e4c8",
            "subnet_id": "subnet-0e9f31c708ed92939"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.private",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.private",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6613decfd17c9c5",
            "route_table_id": "rtb-07b2add70e420e4c8",
            "subnet_id": "subnet-04c26257262275352"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.private",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.private",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b1cba4f43978ffc",
            "route_table_id": "rtb-07b2add70e420e4c8",
            "subnet_id": "subnet-0c9dd93200c387a42"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.private",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.private",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e945d7a0d7a8042d",
            "route_table_id": "rtb-0ca10e8820ad04927",
            "subnet_id": "subnet-0b3323db2b81b007c"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024d1cd1eb182aaf6",
            "route_table_id": "rtb-0ca10e8820ad04927",
            "subnet_id": "subnet-0bfb64e7d12b3b1db"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0621c3f4037fe4c0a",
            "route_table_id": "rtb-0ca10e8820ad04927",
            "subnet_id": "subnet-05855a3b57845dbbd"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_route_table.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_subnet.public",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-00c2b9cb65865bffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c2b9cb65865bffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-intra-us-west-2a",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-intra-us-west-2a",
              "Test": "ex-github-cd"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-05f3ddc1023220e59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.53.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f3ddc1023220e59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-intra-us-west-2b",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-intra-us-west-2b",
              "Test": "ex-github-cd"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-0e1e51f797c426124",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.54.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1e51f797c426124",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-intra-us-west-2c",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-intra-us-west-2c",
              "Test": "ex-github-cd"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-0e9f31c708ed92939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9f31c708ed92939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-private-us-west-2a",
              "Test": "ex-github-cd",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-private-us-west-2a",
              "Test": "ex-github-cd",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-04c26257262275352",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c26257262275352",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-private-us-west-2b",
              "Test": "ex-github-cd",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-private-us-west-2b",
              "Test": "ex-github-cd",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-0c9dd93200c387a42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9dd93200c387a42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-private-us-west-2c",
              "Test": "ex-github-cd",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-private-us-west-2c",
              "Test": "ex-github-cd",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-0b3323db2b81b007c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3323db2b81b007c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-public-us-west-2a",
              "Test": "ex-github-cd",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-public-us-west-2a",
              "Test": "ex-github-cd",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-0bfb64e7d12b3b1db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfb64e7d12b3b1db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-public-us-west-2b",
              "Test": "ex-github-cd",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-public-us-west-2b",
              "Test": "ex-github-cd",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:subnet/subnet-05855a3b57845dbbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05855a3b57845dbbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805395122898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-public-us-west-2c",
              "Test": "ex-github-cd",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd-public-us-west-2c",
              "Test": "ex-github-cd",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ff711b4460bc99a2"
          },
          "dependencies": [
            "module.eks_example_eks-auto-mode.data.aws_availability_zones.available",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc.this",
            "module.eks_example_eks-auto-mode.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_example_eks-auto-mode.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eks_example_eks-auto-mode.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:805395122898:vpc/vpc-0ff711b4460bc99a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039dd49efcab05eb3",
            "default_route_table_id": "rtb-0a8f763f2e6ff8b49",
            "default_security_group_id": "sg-0b5c5922d6ddd2801",
            "dhcp_options_id": "dopt-0a2dc1548f00f3f28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff711b4460bc99a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a8f763f2e6ff8b49",
            "owner_id": "805395122898",
            "tags": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd",
              "Test": "ex-github-cd"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "ex-github-cd",
              "Test": "ex-github-cd"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}